--- a/notebooks/stocks/twitter_sentiment.ipynb
+++ b/notebooks/stocks/twitter_sentiment.ipynb
@@ -62,33 +62,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 9,
       "metadata": {
         "id": "tI115831MWUt"
       },
-      "outputs": [
-        {
-          "ename": "ImportError",
-          "evalue": "cannot import name 'CryptoDataStream' from 'alpaca.data' (/home/codespace/.local/lib/python3.10/site-packages/alpaca/data/__init__.py)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[2], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtweepy\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01malpaca\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CryptoDataStream\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01malpaca\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtrading\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mclient\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TradingClient\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01malpaca\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtrading\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrequests\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MarketOrderRequest\n",
-            "\u001b[0;31mImportError\u001b[0m: cannot import name 'CryptoDataStream' from 'alpaca.data' (/home/codespace/.local/lib/python3.10/site-packages/alpaca/data/__init__.py)"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Import dependencies\n",
         "import re\n",
+        "import os\n",
         "import tweepy\n",
         "import pandas as pd\n",
-        "from alpaca.data import CryptoDataStream\n",
-        "from alpaca.trading.client import TradingClient\n",
-        "from alpaca.trading.requests import MarketOrderRequest\n",
-        "from alpaca.trading.enums import OrderSide, TimeInForce\n",
-        "from nltk.sentiment.vader import SentimentIntensityAnalyzer"
+        "from alpaca.data import *\n",
+        "from alpaca.trading.client import *\n",
+        "from alpaca.trading.requests import *\n",
+        "from alpaca.trading.enums import *\n",
+        "from nltk.sentiment.vader import *"
       ]
     },
     {
@@ -108,17 +97,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "ff3PT26_Mf1n"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'CryptoDataStream' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[11], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m SECRET_KEY \u001b[38;5;241m=\u001b[39m  os\u001b[38;5;241m.\u001b[39mgetenv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAPCA_API_SECRET_KEY\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m trading_client \u001b[38;5;241m=\u001b[39m TradingClient(API_KEY, SECRET_KEY, paper\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m----> 5\u001b[0m crypto_stream \u001b[38;5;241m=\u001b[39m \u001b[43mCryptoDataStream\u001b[49m(API_KEY, SECRET_KEY, raw_data\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Twitter API Credentials\u001b[39;00m\n\u001b[1;32m      8\u001b[0m consumer_key \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m*************************\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'CryptoDataStream' is not defined"
+          ]
+        }
+      ],
       "source": [
-        "# Alpaca API Credentials\n",
-        "APCA_API_KEY = sfsdf\n",
-        "APCA_SECRET_KEY = '****************************************'\n",
-        "trading_client = TradingClient(APCA_API_KEY, APCA_SECRET_KEY, paper=True)\n",
-        "crypto_stream = CryptoDataStream(APCA_API_KEY, APCA_SECRET_KEY, raw_data=True)\n",
+        "API_KEY = os.getenv(\"APCA_API_KEY_ID\")\n",
+        "SECRET_KEY =  os.getenv(\"APCA_API_SECRET_KEY\")\n",
+        "\n",
+        "trading_client = TradingClient(API_KEY, SECRET_KEY, paper=True)\n",
+        "crypto_stream = CryptoDataStream(API_KEY, SECRET_KEY, raw_data=True)\n",
         "\n",
         "# Twitter API Credentials\n",
         "consumer_key = '*************************'\n",
