--- a/notebooks/crypto/supertrend_indicator.ipynb
+++ b/notebooks/crypto/supertrend_indicator.ipynb
@@ -67,28 +67,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 8,
       "metadata": {
         "id": "cOuzqwBsmw5D"
       },
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'pandas_ta'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[5], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msmtplib\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mta\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01malpaca_trade_api\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtradeapi\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01memail\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmime\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtext\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MIMEText\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas_ta'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Import Dependencies\n",
         "import smtplib\n",
+        "import os\n",
         "import pandas as pd\n",
-        "import pandas_ta as ta\n",
         "import alpaca_trade_api as tradeapi\n",
         "from email.mime.text import MIMEText\n",
         "from email.mime.multipart import MIMEMultipart"
@@ -109,23 +97,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 9,
       "metadata": {
         "id": "h8K2Zk68-wvr"
       },
-      "outputs": [
-        {
-          "ename": "NameError",
-          "evalue": "name 'os' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# API Credentials\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m API_KEY \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241m.\u001b[39mgetenv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAPCA_API_KEY_ID\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      3\u001b[0m SECRET_KEY \u001b[38;5;241m=\u001b[39m  os\u001b[38;5;241m.\u001b[39mgetenv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAPCA_API_SECRET_KEY\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m api \u001b[38;5;241m=\u001b[39m tradeapi\u001b[38;5;241m.\u001b[39mREST(API_KEY, SECRET_KEY,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://paper-api.alpaca.markets\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# API Credentials\n",
         "API_KEY = os.getenv(\"APCA_API_KEY_ID\")\n",
@@ -152,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "zbq6buCh-yiD"
       },
@@ -163,6 +139,7 @@
         "    positions = api.list_positions()\n",
         "    for p in positions:\n",
         "        if p.symbol == symbol:\n",
+        "            print(p)\n",
         "            return float(p.qty)\n",
         "    return 0"
       ]
