chore: Update docker-compose.yml and Dockerfiles for new environment variables and dependencies

--- a/notebooks/get_started.ipynb
+++ b/notebooks/get_started.ipynb
@@ -33,12 +33,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 8,
       "metadata": {
         "id": "3PlzuQZU9pvD",
         "metadata": {}
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "asset_id=UUID('64bbff51-59d6-4b3c-9351-13ad85e3c752') symbol='BTCUSD' exchange=<AssetExchange.CRYPTO: 'CRYPTO'> asset_class=<AssetClass.CRYPTO: 'crypto'> asset_marginable=False avg_entry_price='69554.936331716' qty='0.080397749' side=<PositionSide.LONG: 'long'> market_value='5632.0070333982' cost_basis='5592.060312908' unrealized_pl='39.9467204902' unrealized_plpc='0.0071434709668621' unrealized_intraday_pl='39.946720489916292716' unrealized_intraday_plpc='0.007143470966811' current_price='70051.8' lastday_price='69061.83' change_today='0.0143345463043768' swap_rate=None avg_entry_swap_rate=None usd=None qty_available='0.080397749'\n"
+          ]
+        }
+      ],
       "source": [
         "from alpaca.data.historical import CryptoHistoricalDataClient\n",
         "from alpaca.data.requests import CryptoBarsRequest\n",
@@ -61,7 +69,13 @@
         "logger = logging.getLogger(__name__)\n",
         "\n",
         "\n",
-        "# Define the secrets that are"
+        "pos = api.get_open_position('BTCUSD')\n",
+        "print(pos)\n",
+        "\n",
+        "# if unrealized_pl is greater than 1% of market_value\n",
+        "if float(pos.unrealized_pl) >= float(pos.market_value) * 0.01:\n",
+        "    api.close_position('BTCUSD')\n",
+        "    logger.info('Position closed')"
       ]
     },
     {
