--- a/notebooks/crypto/dollar_cost_average.ipynb
+++ b/notebooks/crypto/dollar_cost_average.ipynb
@@ -55,11 +55,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "30CkGAEJsvrd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mRunning cells with 'Python' requires the ipykernel package.\n",
+            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+            "\u001b[1;31mCommand: '/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+          ]
+        }
+      ],
       "source": [
         "%%capture\n",
         "!pip install alpaca_trade_api"
@@ -563,7 +574,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.13"
+      "version": "3.12.4"
     }
   },
   "nbformat": 4,
